feat: support ERC1155 SwapPairs and Swaps
